Fix dark mode placeholder

--- a/src/style.css
+++ b/src/style.css
@@ -189,6 +189,10 @@ h5 {
 		color: white;
 	}
 
+	.form-control::placeholder {
+		color: var(--bs-gray-600);
+	}
+
 	.form-select {
 		background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
 	}
